# claude-orchestrator

./: .gitignore  README.md  pyproject.toml
claude_orchestrator/: __init__.py  cli.py  config.py  errors.py  hooks.py  human_input.py  logging_config.py  models.py  orchestrator.py  prompts.py  runner.py  spec_parser.py  state.py
tests/: conftest.py  test_config.py  test_orchestrator.py  test_security.py  test_state.py
